--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 asgiref==3.2.10
 beautifulsoup4==4.9.3
+certifi==2020.12.5
+chardet==4.0.0
+dj-places==4.0.0
 Django==3.1.2
 django-bootstrap-fields==0.1.6
 django-bootstrap4==2.3.1
 django-leaflet==0.27.1
 django-phonenumber-field==5.0.0
+idna==2.10
 phonenumbers==8.12.12
 pytz==2020.1
+requests==2.25.1
 soupsieve==2.0.1
 sqlparse==0.3.1
+urllib3==1.26.3
