Change password input and edit profilPhoto

--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,7 @@ pip-selfcheck.json
 # JIRA plugin
 atlassian-ide-plugin.xml
 
+db.sqlite3
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
 crashlytics.properties
